<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">
       
       <EditText
           android:id="@+id/captura"
           android:layout_width="300dp"
           android:layout_height="200dp"
           android:layout_gravity="center"
           android:layout_marginTop="20dp"/>
       <Button
           android:id="@+id/guardar"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/Guardararch"
           android:layout_gravity="center"/>
       <TextView
           android:id="@+id/contenido"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:layout_marginTop="20dp"/>
       <Button
           android:id="@+id/leer"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/leerdatos"
           android:layout_gravity="center"/>
       <Button
           android:id="@+id/externo"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/iralmacenamiento"
           android:layout_gravity="center"/>
       <Button
           android:id="@+id/bases"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/irbase"
           android:layout_gravity="center"/>


   </LinearLayout>

</RelativeLayout>