<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BaseDatos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <EditText
            android:id="@+id/nombre"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="Teclea el nombre"/>
        <EditText
            android:id="@+id/materia"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="Teclea la materia"/>
        <Button
            android:id="@+id/guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Guardar"/>
        <Button
            android:id="@+id/leerb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Leer"/>
        <Button
            android:id="@+id/eliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Eliminar"/>
        <Button
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Actualizar"/>
        <TextView
            android:id="@+id/contenidob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Aqui se despliegan los registros"/>



    </LinearLayout>



</RelativeLayout>